--- a/music-lessons/package.json
+++ b/music-lessons/package.json
@@ -11,8 +11,11 @@
     "dotenv": "^16.3.1",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
     "mongoose": "^8.0.2",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth": "^2.0.0"
   }
 }
